Added Context  - DbContect DbSet the entity properties for food

--- a/FoodAppModule/FoodAppModule.csproj
+++ b/FoodAppModule/FoodAppModule.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Context.cs" />
     <Compile Include="Modules\Food.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
